--- a/index.html
+++ b/index.html
@@ -617,8 +617,8 @@
     <section class="project ">
         <div class="project__content max-width-container">
             <div class="project__title">
-                <h2>Get inspired with projects made by our freelancers</h2>
-                <a class="see--more--link" href="#">See More<i class="fa fa-chevron-right"></i></a>
+                <h2>Inspiring work made on Fiverr</h2>
+                <a class="see--more--link w-100" href="#">See More<i class="fa fa-chevron-right"></i></a>
             </div>
 
             <div class="owl-carousel owl-theme project__carousel">
